--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<router-outlet></router-outlet>
+<main>
+ <header> 
+    <app-header></app-header>
+ </header> 
+  <nav>
+    <app-nav></app-nav>
+  </nav>
+  
+    <router-outlet></router-outlet>
+
+    <div class="fixed-bottom">
+        <app-footer></app-footer>
+    </div>
+</main>
