--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,28 @@
-<div class="container d-flex align-items-center justify-content-center vh-100">
+<div class="container">
+  <form class="login-form" (ngSubmit)="login()">
+    <h2>Iniciar Sesión</h2>
+    <div class="form-group">
+      <label for="username">Nombre de Usuario</label>
+      <input type="text" id="username" name="username" [(ngModel)]="user.username" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Contraseña</label>
+      <input type="password" id="password" name="password" [(ngModel)]="user.password" class="form-control" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+  </form>
+  
+  <div class="register-link">
+    ¿No tienes una cuenta? <a routerLink="/sing-up" class="registration-link">Regístrate aquí</a>
+  </div>
+</div>
+
+
+
+
+
+
+<!-- <div class="container d-flex align-items-center justify-content-center vh-100">
   <form class="bg-dark p-4 rounded" (ngSubmit)="login()">
     <h2 class="text-white mb-4">Iniciar Sesión</h2>
     <div class="form-group">
@@ -11,5 +35,12 @@
     </div>
     <button type="submit" id="bottom" class="btn btn-primary">Iniciar Sesión</button>
   </form>
-</div>
+  
+  <div class="text-center mt-3">
+    <a class="text-blue" routerLink="/sing-up">Registrate</a>
+  </div>
+</div> -->
+
+
+ 
 
