--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,1 +1,30 @@
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Menu</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          
+         
+          <li class="nav-item" >
+            <a class="nav-link" [routerLink]="['/login']">Inicio Sesion</a>
+          </li>
+          <li  class="nav-item">
+            <a class="nav-link" routerLink="/inicio">Cierre Sesion</a>
+          </li>
+          <li  class="nav-item">
+            <a class="nav-link active" routerLink="/add-expense">Agregar Gastos</a>
+          </li>
+          <li  class="nav-item">
+            <a class="nav-link active" routerLink="/all-expenses">All Expense</a>
+          </li>
+          <li  class="nav-item">
+            <a class="nav-link active" routerLink="/sing-up">Registro</a>
+          </li>
+         
+        </ul>
+      </div>
+    </div>
+  </nav>
