--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,14 @@
-<p>Inicio</p>
+<div class="header">
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="/add-expense">Gastos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="/home">Ingresos</a>
+      </li>
+    </ul>
+  </div>
+  <div>
+    <app-all-expenses></app-all-expenses>
+  </div>
+  
