--- a/src/app/pages/sing-up/sing-up.component.css
+++ b/src/app/pages/sing-up/sing-up.component.css
@@ -46,3 +46,22 @@
   
   /* Estilos adicionales (si es necesario) */
   
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modal-container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+  }
+  
