--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -23,6 +23,9 @@
           <li  class="nav-item">
             <a class="nav-link active" routerLink="/sing-up">Registro</a>
           </li>
+          <li  class="nav-item">
+            <a class="nav-link active" routerLink="/home">Home</a>
+          </li>
          
         </ul>
       </div>
