--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,5 @@
 body{
     background-color: rgb(209, 225, 239);
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
