agrege fodos, grafico, home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   
     <router-outlet></router-outlet>
 
-    <div class="fixed-bottom">
+    <div >
         <app-footer></app-footer>
     </div>
 </main>
