--- a/src/app/pages/add-expense/add-expense.component.html
+++ b/src/app/pages/add-expense/add-expense.component.html
@@ -1,10 +1,9 @@
 <div class="container">
   <h2>Agregar Gasto</h2>
   <form (submit)="submitForm()">
-    <div class="form-group text-center">
-      <label for="monto" class="sr-only">Monto:</label>
-      <input type="number" id="monto" [(ngModel)]="expense.amount" name="monto" class="form-control border-none text-center" required>
-      <div class="input-underline"></div>
+    <div class="form-group">
+      <label for="monto">Monto:</label>
+      <input type="number" id="monto" [(ngModel)]="expense.amount" name="amount" class="form-control" required>
     </div>
     <div class="form-group">
       <label for="description">Descripción:</label>
@@ -15,20 +14,12 @@
       <label for="date">Fecha:</label>
       <input type="date" id="date" [(ngModel)]="expense.date" name="date" class="form-control" required>
     </div>
-    <!---->
     <div class="form-group">
       <label for="category">Categoría:</label>
-      <div class="category-list">
-        <div *ngFor="let category of categories" (click)="selectCategory(category)" 
-        class="category" [class.selected]="category.id === selectedCategoryId">
-          <div class="category-circle">
-           <mat-icon [style.color]="category.color">{{category.icons}}</mat-icon> 
-          </div>
-          <span>{{ category.name }}</span>
-        </div>
-      </div>
+      <select id="category" [(ngModel)]="selectedCategoryId" name="category" class="form-control" required>
+        <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
+      </select>
     </div>
-    <!----> 
     <div class="form-group">
       <label for="funds">Seleccionar Fondo:</label>
       <select [(ngModel)]="selectedFundsId" name="fundsId" class="form-control" (change)="onFundsChange()">
@@ -37,20 +28,11 @@
         </option>
       </select>
     </div>
-    
+
+
     <br>
     <button type="submit" class="btn btn-primary">Agregar Gasto</button>
-  
   </form>
   <br>
   <a routerLink="/all-expenses">Allexpenses</a>
 </div>
-
-
-<!--<i class="material-icons">shopping_cart</i>  Icono de Material Icons -->
-<!-- <div class="form-group">
-  <label for="category">Categoría:</label>
-  <select id="category" [(ngModel)]="selectedCategoryId" name="category" class="form-control" required>
-    <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
-  </select>
-</div> -->
