--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,5 @@
+<body>
+  
 <div class="container">
   <form class="login-form" (ngSubmit)="login()">
     <h2>Iniciar Sesión</h2>
@@ -5,18 +7,18 @@
       <label for="username">Nombre de Usuario</label>
       <input type="text" id="username" name="username" [(ngModel)]="user.username" class="form-control" required>
     </div>
-    <div class="form-group">
+    <div class="form-group password-label">
       <label for="password">Contraseña</label>
       <input type="password" id="password" name="password" [(ngModel)]="user.password" class="form-control" required>
     </div>
+    
     <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
   </form>
   
   <div class="register-link">
     ¿No tienes una cuenta? <a routerLink="/sing-up" class="registration-link">Regístrate aquí</a>
   </div>
-</div>
-
+</div></body>
 
 
 
