--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,5 @@
 <header class="jumbotron bg-cover text-white">
     <div class="container py-5 text-center">
-        <h1 class="display-4 font-weight-bold">CoinControl</h1>
-        <p class="font-italic mb-0"></p>
+        <img src="assets/img/CoinControlLogo/Coincontrollogocompleto.png" alt="Logo">
     </div>
 </header>
