--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,33 +1,49 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Menu</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          
-         
-          <li class="nav-item" >
-            <a class="nav-link" [routerLink]="['/login']">Inicio Sesion</a>
-          </li>
-          <li  class="nav-item">
-            <a class="nav-link" routerLink="/inicio">Cierre Sesion</a>
-          </li>
-          <li  class="nav-item">
-            <a class="nav-link active" routerLink="/add-expense">Agregar Gastos</a>
-          </li>
-          <li  class="nav-item">
-            <a class="nav-link active" routerLink="/all-expenses">All Expense</a>
-          </li>
-          <li  class="nav-item">
-            <a class="nav-link active" routerLink="/sing-up">Registro</a>
-          </li>
-          <li  class="nav-item">
-            <a class="nav-link active" routerLink="/home">Home</a>
-          </li>
-         
-        </ul>
-      </div>
+<nav class="navbar">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Menu</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/login']">Inicio Sesion</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/inicio">Cierre Sesion</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <div class="dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Gastos
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" routerLink="/add-expense">Añadir gastos</a></li>
+              <li><a class="dropdown-item" routerLink="/all-expenses">Mis gastos</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div class="dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton2" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Fondos
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+              <li><a class="dropdown-item" routerLink="/add-fund">Añadir fondos</a></li>
+              <li><a class="dropdown-item" routerLink="/all-funds">Mis fondos</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="/sing-up">Registro</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
