--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -35,8 +35,10 @@
     <div class="section main-graphic">
         <app-graphic></app-graphic>
     </div>
-    <div class="section">
+    <div class="section-expense">
         <app-all-expenses></app-all-expenses>
     </div>
 </div>
+<!-- Boton flotante para añadir nuevo gasto -->
+<a routerLink="/add-expense"> <i class="bi bi-plus-lg"></i></a>
 
