Pagina de Agregar fondos Creada

--- a/src/app/pages/add-expense/add-expense.component.html
+++ b/src/app/pages/add-expense/add-expense.component.html
@@ -34,5 +34,5 @@
     <button type="submit" class="btn btn-primary">Agregar Gasto</button>
   </form>
   <br>
-  <a routerLink="/all-expenses">Allexpenses</a>
+  <a routerLink="/all-expenses">Mis Gastos</a>
 </div>
