--- a/src/app/pages/all-expenses/all-expenses.component.css
+++ b/src/app/pages/all-expenses/all-expenses.component.css
@@ -1,24 +1,25 @@
-.card-container {
+.container {
   padding: 15px;
 }
 
 .table-container {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   overflow: hidden;
 }
 
 .category-table {
-  width: 100%;
-  border: 1px solid #ccc;
+  width: 80%;
+  border: none;
   margin-bottom: 15px;
   background: #fff;
   border-radius: 8px;
+  margin: 0 auto;
 }
 
 .category-table .category-name {
   background-color: #f0f0f0;
-  border: none;
+  border-style: none;
+  border-radius: 10px;
   cursor: pointer;
   padding: 10px;
   text-align: left;
@@ -32,14 +33,14 @@
 }
 
 .expenses-table {
-  width: 100%;
-  border-collapse: collapse;
-  border-radius: 8px;
+  width: 100%; /* Ancho completo de la tabla */
+  border-collapse: collapse; /* Combina los bordes de las celdas */
+  border: none; /* Elimina los bordes externos de la tabla */
 }
 
 .expenses-table th,
 .expenses-table td {
-  border: 1px solid #ccc;
+  border: none;
   padding: 12px;
 }
 
@@ -69,3 +70,23 @@
 .delete-button:hover {
   background-color: #d32f2f;
 }
+
+
+.category-name {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+
+.category-name .category-name-text {
+  text-align: left;
+  margin-left: 60px;
+}
+
+.category-name .category-total {
+  text-align: right;
+  margin-right: 60px;
+  color: #ff0000; 
+}
+
