--- a/src/app/pages/all-expenses/all-expenses.component.html
+++ b/src/app/pages/all-expenses/all-expenses.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<div class="container">
   <div class="table-container">
     <table class="category-table">
       <ng-container *ngFor="let category of categories">
@@ -6,11 +6,12 @@
         <ng-container *ngIf="categoryHasExpenses(category.id)">
           <tr>
             <td colspan="2">
-              <!-- Muestra el gasto tatal de la categoria especifica y si no hay ningun gasto registrado para esa categoria es decir categoryTotalExpenses[category.name] 
-                es nulo o indefinido, se mostrara "0" como valor por defecto -->
-              <button (click)="toggleCategory(category.id)" class="category-name">{{ category.name }} ${{
-                categoryTotalExpenses[category.name] || 0 }}</button>
+              <button (click)="toggleCategory(category.id)" class="category-name">
+                <span class="category-name-text">{{ category.name }}</span>
+                <span class="category-total">${{ categoryTotalExpenses[category.name] || 0 }}</span>
+              </button>
             </td>
+            
           </tr>
           <tr *ngIf="expandedCategories[category.id]">
             <td colspan="2">
