--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<!-- <footer>
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -36,4 +36,34 @@
             </div>
         </div>
     </div>
+</footer> -->
+<!--Nuevo-->
+<footer class="footer">
+    <div class="group-1">
+        <div class="box">
+            <figure>
+                <a href="">
+                    <img src="assets/img/CoinControlLogo/Coincontrolsimple.png" alt="Logo">
+                </a>
+            </figure>
+        </div>
+        <div class="box">
+            <h2>SOBRE NOSOTROS</h2>
+            <p>Registra tus gastos y controla tus fondos con nuestra
+                aplicación intuitiva de gestión de gastos.</p>
+                <p> ¡Mantén el control de tus finanzas personales de manera
+                    sencilla y eficiente!</p>
+        </div>
+        <div class="box">
+            <h2>SEGUINOS</h2>
+            <div class="social-media">
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-envelope-at"></i></a>
+            </div>
+        </div>
+    </div>
+<div class="group-2">
+    <small>&copy; 2021 <b>CoinControl</b> - Todos los Derechos Reservados.</small>
+</div>
 </footer>
