Agreglos en css

--- a/src/app/pages/all-funds/all-funds.component.html
+++ b/src/app/pages/all-funds/all-funds.component.html
@@ -3,7 +3,7 @@
 
     <ul>
         <li *ngFor="let fund of IdFunds">
-            {{fund.amount}}
+           $ {{fund.amount}}
         </li>
     </ul>
 </div>
