--- a/src/app/pages/graphic/graphic.component.html
+++ b/src/app/pages/graphic/graphic.component.html
@@ -2,4 +2,5 @@
 <!-- <div class="conteiner">
     <canvas id="chartPie">{{chartPie}}</canvas>
 </div> -->
-<canvas id="myPieChart" width="400" height="400"></canvas>
+
+<canvas id="myPieChart" ></canvas>
