--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -27,7 +27,7 @@
             <a class="nav-link active" routerLink="/add-expense">Gastos</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" routerLink="/home">Fondos</a>
+            <a class="nav-link active" routerLink="/add-fund">Fondos</a>
         </li>
     </ul>
 </div>
